--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/Papa/wpilib/java/current/lib/NetworkTables.jar"/>
-	<classpathentry kind="lib" path="/Users/Papa/wpilib/java/current/lib/WPILib.jar"/>
+	<classpathentry kind="lib" path="/Users/Papa/wpilib/java/current/lib/WPILib.jar" sourcepath="/Users/Papa/wpilib/java/current/lib/WPILib-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Papa/wpilib/java/current/lib/NetworkTables-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Papa/wpilib/java/current/lib/WPILib-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
